--- a/client/src/components/MessageOthers/MessageOthers.css
+++ b/client/src/components/MessageOthers/MessageOthers.css
@@ -64,6 +64,14 @@
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
   
+
+  .other-con-lastMessage {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 0.75rem;
+    font-weight: lighter;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.54);
+  }
   
   .other-text-content{
     background-color: #d9d9d9;
