--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -30,10 +30,12 @@
   .signup-box{
     flex: 0.7;
     background-color: white;
+    border: 2px solid #06DAAE;
     border-radius: 20px;
-    margin: 10px;
+    box-shadow: #06DAAE 0px 7px 27px 0px;
+    margin: 70px;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #63d7b0;
+    color: #06DAAE;
     font-weight: bolder;
     display: flex;
     flex-direction: column;
@@ -46,5 +48,6 @@
     color: darkviolet;
     text-decoration: underline;
     cursor: pointer;
+    margin-left: 7px; 
   }
   
