--- a/client/src/components/ChatArea/ChatArea.css
+++ b/client/src/components/ChatArea/ChatArea.css
@@ -18,30 +18,7 @@
     width: 100%;
   }
   
-  
-  .chatArea-con-icon {
-    grid-area: 1/1/3/2;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-    background-color: #d9d9d9;
-  
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2rem;
-    font-weight: bolder;
-    color: white;
-    height: 48px;
-    width: 48px;
-    padding: 2px;
-  
-    border-radius: 50%;
-    justify-self: center;
-    align-self: center;
-    margin-left: 10px;
-    margin-right: 5px;
-  }
+
   
   .chatArea-con-title {
     grid-area: 1/2/2/4;
@@ -108,6 +85,10 @@
     justify-content: space-between;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+
+  .onlineStatus {
+    color: #06ae8c; /* This is a nice green color, you can choose any color you like */
   }
   
   
