--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -53,3 +53,51 @@ align-items: center;
 }
 
 
+.google-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.google-button:hover {
+  background-color: #357ae8; 
+}
+
+.google-icon {
+  margin-right: 8px; 
+  width: 20px;
+  height: auto;
+}
+
+
+
+/* Media Query */
+@media only screen and (max-width: 40em) {
+  .login-container {
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    border-radius: 0;
+  }
+
+.login-box {
+    margin: auto;
+    width: 90%;
+    padding: 18px;
+  }
+
+  .login-image-container {
+    flex: 0;
+    margin-top: 40px;
+  }
+
+  .login-text {
+    font-size: 4vw;
+    text-align: center;
+  }
+
+  .login-welcome-logo {
+    height: 40vw;
+  }
+}
