--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -51,3 +51,52 @@
     margin-left: 7px; 
   }
   
+
+  .google-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.google-button:hover {
+    background-color: #357ae8; 
+}
+
+.google-icon {
+    margin-right: 8px; 
+    width: 20px;
+    height: auto;
+}
+
+
+
+/* Media Query */
+@media only screen and (max-width: 40em) {
+  .signup-container {
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .signup-box {
+    margin: auto;
+    width: 90%;
+    padding: 18px;
+  }
+
+  .signup-image-container {
+    flex: 0;
+    margin-top: 20px;
+  }
+
+  .signup-text {
+    font-size: 4vw;
+    text-align: center;
+  }
+
+  .signup-welcome-logo {
+    height: 40vw;
+  }
+}
