--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,74 +1,67 @@
-
-  
-  .signup-welcome-logo{
+.signup-welcome-logo {
   height: 20vw;
-  }
-  
+}
 
-  .signup-container{
-    height: 100vh;
-    width: 90vw;
-    background-color: #f4f5f8;
-    border-radius: 20px;
-    display: flex;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
-  
-  
-  .signup-image-container{
+.signup-container {
+  height: 100vh;
+  width: 90vw;
+  background-color: #f4f5f8;
+  border-radius: 20px;
+  display: flex;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.signup-image-container {
   flex: 0.3;
   display: flex;
   justify-content: center;
   align-items: center;
-  }
-  
-  .signup-text {
-    font-size: 2vw;
-    padding-bottom: 20px;
-  }
-  
-  .signup-box{
-    flex: 0.7;
-    background-color: white;
-    border: 2px solid #06DAAE;
-    border-radius: 20px;
-    box-shadow: #06DAAE 0px 7px 27px 0px;
-    margin: 70px;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #06DAAE;
-    font-weight: bolder;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-  
-  .signup-hyper {
-    color: darkviolet;
-    text-decoration: underline;
-    cursor: pointer;
-    margin-left: 7px; 
-  }
-  
+}
 
-  .google-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.signup-text {
+  font-size: 2vw;
+  padding-bottom: 20px;
+}
+
+.signup-box {
+  flex: 0.7;
+  background-color: white;
+  border: 2px solid #06daae;
+  border-radius: 20px;
+  box-shadow: #06daae 0px 7px 27px 0px;
+  margin: 70px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #06daae;
+  font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.signup-hyper {
+  color: darkviolet;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-left: 7px;
+}
+
+.google-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .google-button:hover {
-    background-color: #357ae8; 
+  background-color: #357ae8;
 }
 
 .google-icon {
-    margin-right: 8px; 
-    width: 20px;
-    height: auto;
+  margin-right: 8px;
+  width: 20px;
+  height: auto;
 }
-
-
 
 /* Media Query */
 @media only screen and (max-width: 40em) {
